# marek_speech_recognition

./: .gitignore  Cargo.toml  README.md
libsoda_sys/: Cargo.toml  README.md  build.rs
libsoda_sys/src/: lib.rs  soda_api.proto
marek_google_speech_recognition/: Cargo.toml  README.md
marek_google_speech_recognition/src/: google_recognizer.rs  google_recognizer_factory.rs  lib.rs
marek_speech_recognition_api/: Cargo.toml
marek_speech_recognition_api/src/: error.rs  lib.rs  recognition_event.rs  recognition_mode.rs  recognizer.rs  recognizer_factory.rs  recognizer_info.rs  recognizer_options.rs
marek_vosk_speech_recognition/: Cargo.toml  Cargo.toml~  README.md
marek_vosk_speech_recognition/src/: lib.rs  vosk_recognizer.rs  vosk_recognizer_factory.rs
speech_recognition_test/: Cargo.toml  README.md
speech_recognition_test/src/: main.rs
