[package]
name = "libsoda_sys"
version = "1.0.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Bindings for Google Chrome's libsoda"
keywords = ["speech", "recognition", "soda"]
categories = ["accessibility", "multimedia::audio", "external-ffi-bindings"]
repository = "https://github.com/marek-g/marek_speech_recognition"
documentation = "https://docs.rs/libsoda_sys"
edition = "2021"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
libloading = "0.7"
bytes = "1.3"
prost = "0.11"

[build-dependencies]
prost-build = "0.11"
