[package]
name = "speech_recognition_test"
version = "2.1.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Speech recognition test application"
keywords = ["speech", "recognition", "api"]
categories = ["accessibility", "multimedia::audio"]
repository = "https://github.com/marek-g/marek_speech_recognition"
documentation = "https://docs.rs/speech_recognition_test"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
marek_speech_recognition_api = { version = "2.1", path="../marek_speech_recognition_api" }
marek_google_speech_recognition = { version = "2.1", path="../marek_google_speech_recognition" }
marek_vosk_speech_recognition = { version = "2.1", path="../marek_vosk_speech_recognition" }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
byteorder = "1"
